--- a/web/lab1/client/index.html
+++ b/web/lab1/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./js/3rdparty/jquery-3.7.1.min.js"></script>
     <script type="module" src="./js/pages/MainPage.js"></script>
   </head>
 
