WEB-LAB1: added axis canvas; better validation

--- a/web/lab1/client/index.html
+++ b/web/lab1/client/index.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <script src="./js/3rdparty/jquery-3.7.1.min.js"></script>
-    <script type="module" src="./js/pages/MainPage.js"></script>
+    <script type="module" src="./js/views/main.js"></script>
   </head>
 
   <body>
     <header>Бардин Петр Алексеевич, P3219</header>
 
-    <img src="static/areas.png" />
-
+    <canvas
+      id="canvas"
+      style="border-style: ridge; width: 50%; height: 50%"
+    ></canvas>
     <table id="table-input"></table>
   </body>
 </html>
