WEB-LAB1: basic request processing

--- a/web/lab1/client/index.html
+++ b/web/lab1/client/index.html
@@ -10,7 +10,7 @@
 
     <canvas
       id="canvas"
-      style="border-style: ridge; width: 50%; height: 50%"
+      style="border-style: ridge; width: 400px; height: 400px"
     ></canvas>
     <table id="table-input"></table>
   </body>
