WEB-LAB1: refactored plot

--- a/web/lab1/client/index.html
+++ b/web/lab1/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="./js/3rdparty/jquery-3.7.1.min.js"></script>
-    <script type="module" src="./js/views/main.js"></script>
+    <script type="module" src="./js/views/MainPage.js"></script>
   </head>
 
   <body>
@@ -10,8 +10,11 @@
 
     <canvas
       id="canvas"
-      style="border-style: ridge; width: 400px; height: 400px"
+      style="border-style: ridge"
+      width="400"
+      height="400"
     ></canvas>
     <table id="table-input"></table>
+    <table id="table-result"></table>
   </body>
 </html>
