WEB-LAB1: added table

--- a/web/lab1/client/index.html
+++ b/web/lab1/client/index.html
@@ -9,7 +9,7 @@
     <header>Бардин Петр Алексеевич, P3219</header>
 
     <canvas
-      id="canvas"
+      id="plot-canvas"
       style="border-style: ridge"
       width="400"
       height="400"
