WEB-LAB1: points on plot

--- a/web/lab1/client/index.html
+++ b/web/lab1/client/index.html
@@ -7,14 +7,25 @@
 
   <body>
     <header>Бардин Петр Алексеевич, P3219</header>
-
-    <canvas
-      id="plot-canvas"
-      style="border-style: ridge"
-      width="400"
-      height="400"
-    ></canvas>
-    <table id="table-input"></table>
-    <table id="table-result"></table>
+    <table class="container">
+      <tr>
+        <td>
+          <canvas
+            id="plot-canvas"
+            style="border-style: ridge"
+            width="400"
+            height="400"
+          ></canvas>
+        </td>
+        <td>
+          <table id="table-result"></table>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <table id="table-input"></table>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
