WEB-LAB1: docker

--- a/web/lab1/client/static/index.html
+++ b/web/lab1/client/static/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+
     <script type="module" src="../js/views/MainPage.js"></script>
 
     <link rel="stylesheet" href="../style/index.scss" />
