WEB-LAB1: minor updates

--- a/web/lab1/client/static/index.html
+++ b/web/lab1/client/static/index.html
@@ -6,6 +6,7 @@
     <script type="module" src="../js/views/MainPage.js"></script>
 
     <link rel="stylesheet" href="../style/index.scss" />
+    <title>Lab 1</title>
   </head>
 
   <body>
